# zpf2020

./: .gitignore  README.md
Code/Concur/: .gitignore  GetHTTPS.hs  GetURL.hs  IORef1.hs  IORef2.hs  IORef3.hs  IORef4.hs  fork.hs  geturls1.hs  geturls2.hs  geturls3.hs  geturls4.hs  package.yaml  parmonad.hs  parnetwork.hs  stack.yaml  stm1.hs
Code/Par/: .gitignore  Makefile  package.yaml  queens.hs  stack.yaml  sudoku2.hs
Code/Promo/: ClassAdd.hs  Expr1.hs  Expr3.hs  Expr4.hs  Expr5.hs  Promo.hs  TypeEquality.hs
Code/TH/Here/: Main.hs  Makefile  Str.hs
Code/TH/Projections/: Build3.hs  Declare1.hs  Declare2.hs  Declare3.hs  Foo.hs  Makefile
Code/TH/QQ/: Expr.hs  Expr2.hs  ExprQuote1.hs  ExprQuote2.hs  ExprQuoteManual.hs  Simpl0.hs  Simpl1.hs  Simpl2.hs  TestExprQuote1.hs  TestExprQuote2.hs  qq.cabal  stack.yaml
Code/hello/: package.yaml
Lab/: lab01-typy.md  lab02-testy.md  lab10-meta.md  lab11par.md  lab12-concur.md  lab13promo.md
Slides/01Typ1/: 01typy.md  ClassFact.hs  Collection.hs  Collects.hs  Conquer.hs
Slides/02QC/: 02testy.md  CheckAll.hs  DoctestExamples.hs  Fib.hs  HedgehogInsert.hs  MkName.hs  SimpleCheck.hs  SimpleCheck1.hs  SimpleCheck2.hs  SimpleSort1.hs  Square.hs  Tree1.hs  Tree2.hs  Tree3.hs  Tree91.hs
Slides/10TH/: 10meta.md
Slides/11Par/: 11par.md
Slides/12Concur/: 12concur.md
Slides/13Promo/: 13promo.md  Expr2.hs  Makefile  Promo.hs  VecClass.hs
www/: 01typy-slides.html  01typy.html  02testy-slides.html  02testy.html  10meta-slides.html  10meta.html  11par-slides.html  11par.html  12concur-slides.html  12concur.html  13promo-slides.html  13promo.html
