name:                qq
version:             0.0.0.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Marcin Benke
maintainer:          marcin.benke@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable Simpl0
  main-is:             Simpl0.hs
  other-modules:       Expr, ExprQuoteManual
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.7, parsec, template-haskell, syb
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable Simpl1
  main-is:             Simpl1.hs
  other-modules:       Expr, ExprQuote1
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.7, parsec, template-haskell, syb
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable Simpl2
  main-is:             Simpl2.hs
  other-modules:       Expr2, ExprQuote2
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.7, parsec, template-haskell, syb
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable TestExprQuote2
  main-is:             TestExprQuote2.hs
  other-modules:       Expr2, ExprQuote2
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.7, parsec, template-haskell, syb
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable TestExprQuote1
  main-is:             TestExprQuote1.hs
  other-modules:       Expr, ExprQuote1
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.7, parsec, template-haskell
  -- hs-source-dirs:      
  default-language:    Haskell2010
